--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ main {
 
 /* Estils per al nom del fitxer sota cada imatge del grid */
 .image-name-grid {
+    display: none;
+/*
     position: absolute;
     bottom: 5px;
     left: 5px;
@@ -69,6 +71,7 @@ main {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 2px 5px;
     border-radius: 3px;
+*/
 }
 
 #full-image-view {
