--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ main {
 }
 
 #image-name {
+    display: none;
+/*
     position: absolute;
     bottom: 10px;
     left: 50%;
@@ -113,6 +115,7 @@ main {
     color: white;
     font-size: 16px;
     text-align: center;
+*/
 }
 
 
