--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
 header {
     background-color: #222;
     padding: 10px 0;
+    display: flex;
+    align-items: center;
+   /* justify-content: space-between; */
 }
 
 
@@ -17,16 +20,26 @@ nav ul {
     padding: 0;
     margin: 0;
     text-align: center;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 nav ul li {
     display: inline;
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-family: Calibri, sans-serif;
+    font-size: 16px;
+}
+
+nav ul li a:hover {
+    color: gray; 
 }
 
 main {
