--- a/style.css
+++ b/style.css
@@ -166,10 +166,11 @@ main {
     background-color: transparent; /* Fons transparent */
     color: white;
     border: none;
-    padding: 10px 15px;
+    padding: 5px 5px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 5px;
     border-radius: 5px;
+    transform: scale(0.6);
 }
 
 
@@ -178,10 +179,11 @@ main {
     background-color: transparent; /* Fons transparent */
     color: white;
     border: none;
-    padding: 10px 15px;
+    padding: 5px 5px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 5px;
     border-radius: 5px;
+    transform: scale(0.6);
 }
 
 
@@ -193,7 +195,8 @@ main {
 
 #prev-image img:hover,
 #next-image img:hover {
-    filter: invert(0);
+/*    filter: invert(0); */
+    transform: scale(1.1);
 }
 
 
